--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -319,6 +319,7 @@ input:read-only {
   background-color: #89C9E3;
   background-image: none;
   border: 1px solid #ccc;
+  text-align: end;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
